--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "TimothyAbramov.github.io"
+  title: "Timothy Abramov"
   navbar:
     left:
       - text: Feed
