--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ website:
   navbar:
     left:
       - text: Feed
-        href: feed.qmd
+        href: index.qmd
       - text: Poems
         href: poems.qmd
       - text: Projects
